Version 1.6
- Bug fixes
- Improvements for Question settings/list pages.